--- a/login/src/assets/components/Home-page/Homepage.css
+++ b/login/src/assets/components/Home-page/Homepage.css
@@ -1,4 +1,3 @@
-
 .landing-container {
     position: relative;
     display: flex;
@@ -7,10 +6,11 @@
     justify-content: center;
     height: 100vh;
     text-align: center;
-    background-image: url('C:\Users\Administrator\Desktop\latest version\login\src\assets\components\images\18129294.jpg'); 
-    background-size: cover;   
+    background-image: url('../images/background.jpg');
+    background-size: cover;
     background-position: center;
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .top-left-image {
@@ -35,13 +35,14 @@
     from {
         width: 0;
     }
+
     to {
         width: 100%;
     }
 }
 
 @keyframes blink {
-    50% { 
+    50% {
         border-color: transparent;
     }
 }
